# soroban-playground

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_ISSUES.md  README.md  STELLAR_GRANT_PITCH.md  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-lint.yml  codeql.yml  secrets-scan.yml
backend/: Dockerfile  README.md  jest.config.cjs  package.json
contracts/carbon-credit/: Cargo.toml
contracts/carbon-credit/src/: lib.rs  test.rs
contracts/hello-world/: Cargo.toml  README.md
contracts/hello-world/src/: lib.rs
contracts/insurance-protocol/: Cargo.toml  README.md
contracts/insurance-protocol/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/insurance-protocol/test_snapshots/test/: test_buy_policy_on_inactive_product_fails.1.json  test_buy_policy_sequential_ids.1.json  test_buy_policy_stores_data.1.json  test_counters_increment.1.json  test_deactivate_product.1.json  test_double_vote_fails.1.json  test_file_claim_expired_policy_fails.1.json  test_file_claim_non_holder_fails.1.json  test_file_claim_stores_data.1.json  test_finalise_before_voting_ends_fails.1.json  test_finalise_claim_approved.1.json  test_finalise_claim_rejected.1.json  test_finalise_insufficient_votes_fails.1.json  test_finalise_twice_fails.1.json  test_initialize_twice_fails.1.json  test_list_product_empty_name_fails.1.json  test_list_product_invalid_risk_score_fails.1.json  test_list_product_non_admin_fails.1.json  test_list_product_sequential_ids.1.json  test_list_product_stores_data.1.json  test_list_product_zero_coverage_fails.1.json  test_list_product_zero_premium_fails.1.json  test_vote_increments_counts.1.json  test_vote_on_finalised_claim_fails.1.json
contracts/key-value-store/: Cargo.toml
contracts/key-value-store/src/: lib.rs
contracts/prediction-market/: Cargo.toml
contracts/prediction-market/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/real-estate/: Cargo.toml  README.md
contracts/real-estate/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/real-estate/test_snapshots/test/: test_buy_more_shares_accumulates.1.json  test_buy_shares_exceeds_supply_fails.1.json  test_buy_shares_on_delisted_fails.1.json  test_buy_shares_updates_ownership_and_property.1.json  test_buy_shares_zero_fails.1.json  test_claim_rental_nothing_to_claim_fails.1.json  test_claim_rental_pro_rata.1.json  test_claim_rental_twice_second_fails.1.json  test_claimable_rental_view.1.json  test_delist_property.1.json  test_deposit_rental_updates_property.1.json  test_deposit_rental_zero_fails.1.json  test_initialize_sets_admin.1.json  test_initialize_twice_fails.1.json  test_list_property_empty_name_fails.1.json  test_list_property_non_admin_fails.1.json  test_list_property_sequential_ids.1.json  test_list_property_stores_data.1.json  test_list_property_zero_price_fails.1.json  test_list_property_zero_shares_fails.1.json  test_multiple_investors_accumulate_shares_sold.1.json  test_new_investor_does_not_claim_old_rental.1.json  test_property_count_increments.1.json  test_transfer_all_shares_removes_sender.1.json  test_transfer_exceeds_shares_fails.1.json  test_transfer_shares_moves_ownership.1.json  test_transfer_zero_shares_fails.1.json
contracts/token-vesting/: Cargo.toml
contracts/token-vesting/src/: lib.rs  storage.rs  test.rs  types.rs
frontend/: Dockerfile  next.config.ts  package.json
(+127 files in other folders)
