[package]
name = "soroban-real-estate"
version = "0.1.0"
edition = "2021"
description = "Tokenized real estate with fractional ownership, rental distribution, and property investment platform"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.6"

[dev-dependencies]
soroban-sdk = { version = "21.0.6", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
